# data_challenge

./: .gitignore  README.md  pyproject.toml
conf/base/: catalog.yml  parameters.yml
src/data_challenge/: __init__.py  pipeline_registry.py  settings.py
src/data_challenge/pipelines/: __init__.py
src/data_challenge/pipelines/medical_processing/: __init__.py  nodes.py  pipeline.py
